set overflow:hidden to avoid scrollbars appearing

--- a/css/fewtile.css
+++ b/css/fewtile.css
@@ -4,6 +4,7 @@
   right:0;
   bottom:0;
   left:0;
+  overflow:hidden; /* Prevents scrollbars appearing */
 }
 
 .tile {
